@@ -17,35 +17,35 @@ git:
 matrix:
   include:
     - perl: '5.10'
-      env: AUTHOR_TESTING=1
+      env: DIST_ZILLA=5.048
 
     - perl: '5.12'
-      env: AUTHOR_TESTING=1
+      env: DIST_ZILLA=5.048
 
     - perl: '5.14'
-      env: AUTHOR_TESTING=1
+      env: DIST_ZILLA=6.012
 
     - perl: '5.16'
-      env: AUTHOR_TESTING=1
+      env: DIST_ZILLA=6.012
 
     - perl: '5.18'
-      env: AUTHOR_TESTING=1
+      env: DIST_ZILLA=6.012
 
     - perl: '5.18'
-      env: AUTHOR_TESTING=1
+      env: DIST_ZILLA=6.012 AUTHOR_TESTING=1
       os: osx
 
     - perl: '5.20'
-      env: AUTHOR_TESTING=1
+      env: DIST_ZILLA=6.012
 
     - perl: '5.22'
-      env: AUTHOR_TESTING=1
+      env: DIST_ZILLA=6.012
 
     - perl: '5.24'
-      env: AUTHOR_TESTING=1
+      env: DIST_ZILLA=6.012 AUTHOR_TESTING=1
 
     - perl: '5.26'
-      env: AUTHOR_TESTING=1
+      env: DIST_ZILLA=6.012
 
 before_install:
   - |
@@ -66,14 +66,39 @@ before_install:
         eval $(perl -I $HOME/perl5/lib/perl5/ -Mlocal::lib)
         ;;
     esac
+  - perl -V
+  - perl -e '
+      my $ok = 0;
+      if ( $ENV{TRAVIS_PERL_VERSION} =~ m{ ^ 5 [.] ([1-9] [0-9]*) $ }xsm ) {
+          my $want = sprintf "5.%03i", $1;
+          if ( $] =~ m{ ^ \Q$want\E [0-9]{3} $ }xsm ) {
+              $ok = 1;
+          }
+      }
+      elsif ( $ENV{TRAVIS_PERL_VERSION} =~ m{ ^ 5 [.] ( [1-9] [0-9]* ) [.] ( [0-9]+ ) $ }xsm ) {
+          if ( $] eq sprintf "5.%03i%03i", $1, $2 ) {
+              $ok = 1;
+          }
+      }
+
+      die "We asked for Perl $ENV{TRAVIS_PERL_VERSION} but got $]\n" if $ok == 0;
+      print "Perl $ENV{TRAVIS_PERL_VERSION} is requested and $] is installed. Good!\n";
+      exit 0;
+    '
 
 install:
   - |
+    if [ -n "$DIST_ZILLA" ]
+    then
+        cpanm --verbose --notest --skip-satisfied Dist::Zilla@$DIST_ZILLA
+        dzil version
+    fi
+  - |
     if [ -n "$AUTHOR_TESTING" ]
     then
-      cpanm --verbose --installdeps --notest --skip-satisfied --with-develop .
+        cpanm --verbose --installdeps --notest --skip-satisfied --with-develop .
     else
-      cpanm --verbose --installdeps --notest --skip-satisfied .
+        cpanm --verbose --installdeps --notest --skip-satisfied .
     fi
 
 script:
@@ -81,5 +106,5 @@ script:
   - |
     if [ -n "$AUTHOR_TESTING" ]
     then
-      prove -lr xt/author
+        prove -lr xt/author
     fi
