@@ -48,7 +48,6 @@
             "Test::Fatal" : "0",
             "Test::More" : "0",
             "Test::TempDir::Tiny" : "0",
-            "autodie" : "0",
             "lib" : "0",
             "perl" : "5.006"
          }
