@@ -13,7 +13,8 @@ lib = dzil-inc/lib
 
 [@Author::SKIRMESS]
 :version = 1.000
-Author::SKIRMESS::ProjectSkeleton.travis_ci_ignore_perl[5.8] = 5.8
+Author::SKIRMESS::ProjectSkeleton.travis_ci_dist_zilla    = 1
+Author::SKIRMESS::ProjectSkeleton.travis_ci_earliest_perl = 5.10.1
 
 [Prereqs]
 -phase = test
