@@ -2,6 +2,7 @@ Revision history for Dist-Zilla-Plugin-Git-RequireUnixEOL
 
 {{$NEXT}}
 
+  - Removed unused test dependency on autodie
   - Code cleanup - moved all 'use' before 'has'
 
 1.000  2018-04-02 16:13:25 UTC
